grammar.bnf
expression -> assignment ;
assignment -> IDENTIFIER "=" assignment
            | logical_or ;
logical_or -> logical_and ( "or" logical_and )* ;
logical_and-> equality ( "and" equality )* ;
equality   -> comparison ( ( "!=" | "==" ) comparison )* ;
comparison -> term ( ( ">" | ">=" | "<" | "<=" ) term )* ;
term       -> factor ( ( "-" | "+" ) factor )* ;
factor     -> unary ( ( "/" | "*" ) unary )* ;
unary      -> ( "!" | "-" ) unary
            | primary ;
primary    -> NUMBER | STRING | "true" | "false" | "nil"
            | "(" expression ")"
            | IDENTIFIER ;

program    -> declaration* EOF;
declaration -> varDecl
            | statement ;
statement  -> exprStmt
            | printStmt
            | block
            | ifStmt;
exprStmt   -> expression ";";
printStmt  -> "print" expression ";";
varDecl    -> "var" IDENTIFIER ( "=" expression )? ";" ;
block      -> "{" declaration* "}" ;
ifStmt     -> "if" "(" expression ")" statement
              ( "else" statement )? ;
